// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPageInfo 1`] = `
Object {
  "endCursor": "eyJvZmZzZXQiOjEwLCJxIjoia2V5d29yZCJ9",
  "hasNextPage": true,
  "hasPrevPage": true,
  "next": "http://localhost:3000/api/search?q=keyword&after=eyJvZmZzZXQiOjEwLCJxIjoia2V5d29yZCJ9",
  "prev": "http://localhost:3000/api/search?q=keyword&before=eyJvZmZzZXQiOjAsInEiOiJrZXl3b3JkIn0",
  "startCursor": "eyJvZmZzZXQiOjAsInEiOiJrZXl3b3JkIn0",
  "totalCount": 10,
}
`;

exports[`getPageInfo 2`] = `
Object {
  "endCursor": "eyJvZmZzZXQiOjEwLCJxIjoia2V5d29yZCJ9",
  "hasNextPage": true,
  "hasPrevPage": false,
  "next": "http://localhost:3000/api/search?q=keyword&after=eyJvZmZzZXQiOjEwLCJxIjoia2V5d29yZCJ9",
  "prev": null,
  "startCursor": null,
  "totalCount": 10,
}
`;

exports[`getPageInfo 3`] = `
Object {
  "endCursor": null,
  "hasNextPage": false,
  "hasPrevPage": true,
  "next": null,
  "prev": "http://localhost:3000/api/search?q=keyword&before=eyJvZmZzZXQiOjAsInEiOiJrZXl3b3JkIn0",
  "startCursor": "eyJvZmZzZXQiOjAsInEiOiJrZXl3b3JkIn0",
  "totalCount": 10,
}
`;

exports[`getPageInfo 4`] = `
Object {
  "endCursor": null,
  "hasNextPage": false,
  "hasPrevPage": false,
  "next": null,
  "prev": null,
  "startCursor": null,
  "totalCount": 10,
}
`;

exports[`parse search keyword 1`] = `
Array [
  Array [
    "%fruit%",
  ],
  Array [],
  Array [],
]
`;

exports[`parse search keyword 2`] = `
Array [
  Array [],
  Array [
    "%fruit%",
  ],
  Array [],
]
`;

exports[`parse search keyword 3`] = `
Array [
  Array [],
  Array [],
  Array [
    "%likecoin_id_1%",
  ],
]
`;

exports[`parse search keyword 4`] = `
Array [
  Array [
    "%fruit%",
  ],
  Array [
    "%fruit%",
  ],
  Array [
    "%likecoin_id_1%",
  ],
]
`;

exports[`parse search keyword 5`] = `
Array [
  Array [
    "%test%",
    "%empty%",
  ],
  Array [],
  Array [],
]
`;

exports[`parse search query 1`] = `
Array [
  "fruit",
  0,
]
`;

exports[`parse search query 2`] = `
Array [
  "#fruit",
  0,
]
`;

exports[`parse search query 3`] = `
Array [
  "@likecoin_id_1",
  0,
]
`;

exports[`parse search query 4`] = `
Array [
  "#fruit",
  15,
]
`;

exports[`parse search query 5`] = `
Array [
  "#fruit",
  0,
]
`;
